# Atlas

./: .gitignore  CMakeLists.txt  README.md  compiler.config.json  mod.json  xmake.lua
.github/workflows/: VersionTools.ts  build.yml
AdvancedF3/: CMakeLists.txt  README.md  mod.json.in
AdvancedF3/lib/: HWinfo.lib
AdvancedF3/src/: dllmain.cpp  dllmain.h
AdvancedF3/src/recorder/hardware_recorder/: HardwareInfo.h  HardwareRecorder.cpp  HardwareRecorder.h
AdvancedF3/src/recorder/ps_recorder/: psRecorder.cpp  psRecorder.h
AdvancedF3/src/ui/config/: UiConfig.h
AdvancedF3/src/ui/f3/: f3DataBuilder.cpp  f3DataBuilder.h  f3Renderer.cpp  f3Renderer.h  f3State.h
AdvancedF3/src/ui/minimap/: minimapRenderer.cpp  minimapRenderer.h
BlockNav/: CMakeLists.txt  README.md  mod.json.in
BlockNav/src/: dllmain.cpp  dllmain.h
BlockNav/src/color/: ColorHandler.cpp  ColorHandler.h
BlockNav/src/heightmap/: HeightMapCalc.cpp  HeightMapCalc.h
BlockNav/src/minimap/: minimapRenderer.cpp  minimapRenderer.h
BlockNav/src/recorder/hardware_recorder/: HardwareInfo.h  HardwareRecorder.h
BlockNav/src/recorder/ps_recorder/: psRecorder.cpp  psRecorder.h
BlockNav/src/ui/config/: UiConfig.cpp  UiConfig.h
data/: config.json
data/packs/RP/: manifest.json
resources/: Atlas.mcpack  manifest.json
resources/ui/: settings_screen.json
resources/ui/settings_sections/: general_section.json
src/: dllmain.cpp  dllmain.h  dllmain.hpp
src/color/: ColorHandler.h
src/heightmap/: HeightMapCalc.h
src/minimap/: Minimap.cpp  Minimap.h  Minimap.hpp  minimapRenderer.h
(+31 files in other folders)
